# ChessEngine

./: .gitignore  CMakeLists.txt  README.md
ChessEngine/: CMakeLists.txt  ChessEngine.cpp
Core/: CMakeLists.txt
Core/include/: Bishop.hpp  Board.hpp  Figure.hpp  IFigure.hpp  King.hpp  Knight.hpp  Move.hpp  Pawn.hpp  Position.hpp  Rook.hpp  board.hpp
Core/source/: Bishop.cpp  Board.cpp  Figure.cpp  IFigure.cpp  King.cpp  Knight.cpp  Move.cpp  Pawn.cpp  Position.cpp  Rook.cpp
libs/Core/: CMakeLists.txt
libs/Core/include/: Bishop.hpp  King.hpp  Pawn.hpp  Position.hpp
libs/Core/source/: Board.cpp  King.cpp  Move.cpp  Position.cpp
libs/Graphics/: CMakeLists.txt
libs/Graphics/include/: IRenderer.hpp  TermRenderer.hpp  TerminalRenderer.hpp
libs/Graphics/source/: TerminalRenderer.cpp
